Bug 466475 - Welcome Center doesn't write "ShouldShow=false" into config file when closed by a method other than the "Skip" and "finish" buttons
Summary: Welcome Center doesn't write "ShouldShow=false" into config file when closed ...
Status: RESOLVED FIXED
Alias: None
Product: Welcome Center
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-26 15:05 UTC by aronkvh
Modified: 2023-03-03 00:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aronkvh 2023-02-26 15:05:42 UTC
I didn't get the welcome center when I updated to 5.27, but a couple of days later it started appearing after every boot. 

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 5.19.0-32-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-3770 CPU @ 3.40GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA
Comment 1 Nate Graham 2023-02-27 16:56:12 UTC
Can you paste the contents of ~/.config/plasma-welcomerc?
Comment 2 aronkvh 2023-02-27 16:57:12 UTC
(In reply to Nate Graham from comment #1)
> Can you paste the contents of ~/.config/plasma-welcomerc?

[General]
LastSeenVersion=5.27.1
Comment 3 Nate Graham 2023-02-27 18:27:44 UTC
Thanks. I would expect it to contain:

ShouldShow=false

If you manually add that to the config file, does it stop autostarting at login?

If that works, we'll need to figure out why it's not getting added as expected. How are you quitting the app when it appears?
Comment 4 aronkvh 2023-02-27 21:40:00 UTC
(In reply to Nate Graham from comment #3)
> Thanks. I would expect it to contain:
> 
> ShouldShow=false
> 
> If you manually add that to the config file, does it stop autostarting at
> login?
> 
> If that works, we'll need to figure out why it's not getting added as
> expected. How are you quitting the app when it appears?

It doesn't appear anymore after adding that line.
the first time I went through the pages, afterward, I just closed it from the titlebar.
this wasn't a fresh install so I don't know why it appeared even once
Comment 5 Nate Graham 2023-02-28 17:10:20 UTC
It will appear once on the login after the package is first installed. The intention is that quitting the app in in any way will write "ShouldShow=false" to the config file and prevent autostart in the future. This is working for me. So we need to figure out why it's not working for you, and under which circumstances it happens.

Can you open the config file in a text editor, manually open the app, and see if "ShouldShow=false" gets written to the config file in any of the following circumstances:
- Clicking the "Skip" button on the first page
- Clicking the "Finish" button on the last page
- Clicking the close button on the titlebar
- Clicking the close button on the Task manager tooltip for the window
- Hitting Ctrl+Q on the keyboard
- Hitting Alt+F4 on the keyboard

After testing each one, if it *does* write "ShouldShow=false" into the config file, you can remove it from the file before testing the next method.
Comment 6 aronkvh 2023-02-28 22:29:00 UTC
(In reply to Nate Graham from comment #5)
> It will appear once on the login after the package is first installed. The
> intention is that quitting the app in in any way will write
> "ShouldShow=false" to the config file and prevent autostart in the future.
> This is working for me. So we need to figure out why it's not working for
> you, and under which circumstances it happens.
> 
> Can you open the config file in a text editor, manually open the app, and
> see if "ShouldShow=false" gets written to the config file in any of the
> following circumstances:
> - Clicking the "Skip" button on the first page
> - Clicking the "Finish" button on the last page
> - Clicking the close button on the titlebar
> - Clicking the close button on the Task manager tooltip for the window
> - Hitting Ctrl+Q on the keyboard
> - Hitting Alt+F4 on the keyboard
> 
> After testing each one, if it *does* write "ShouldShow=false" into the
> config file, you can remove it from the file before testing the next method.

Skip or Finish writes the line but closing in other ways doesn't.
Comment 7 Nate Graham 2023-03-01 15:14:00 UTC
Ok, sounds like the signal handler for window closing isn't working properly. Will investigate.
Comment 8 Nate Graham 2023-03-02 22:13:36 UTC
Can confirm. in 5.27 we don't handle external quit events. I could have sworn we did. Will fix.
Comment 9 Nate Graham 2023-03-02 22:16:39 UTC
I see the problem. We do handle it, but we only write the config key relevant for the Plasma 6 version of the app, not also the Plasma 5.27 version of it as well.
Comment 10 Bug Janitor Service 2023-03-02 22:24:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-welcome/-/merge_requests/68
Comment 11 Nate Graham 2023-03-03 00:00:44 UTC
Git commit f4c50c5ee61a2d2eaf3511959b20f9fac87489e6 by Nate Graham.
Committed on 02/03/2023 at 23:58.
Pushed by ngraham into branch 'Plasma/5.27'.

Set "ShouldShow=false" when quitting the app using amy method

...Not just the Skip and Finish buttons. This isn't an issue in the 6.0
version of the app which uses different heuristics to determine whether
to autostart the app, but it is an isue for the 5.27 version which
simply checks for the presence of "ShouldShow=False" in the config file.

The fact that we haven't gotten absolute avalance of bug reports about
this indicates that nearly all of the people who encounter the welcome
app are either clicking on the Skip button, or going through the entire
thing and then clicking on the Finish button. So that's nice at least.

Test Plan: remove "ShouldShow=false" from ~/.config/plasma-welcomerc,
launch the app, and quit it with Ctrl+Q, Alt+F4, titlebar close button,
or Task Manager close button/menu item
FIXED-IN: 5.27.3

M  +2    -8    src/contents/ui/main.qml
M  +1    -0    src/main.cpp

https://invent.kde.org/plasma/plasma-welcome/commit/f4c50c5ee61a2d2eaf3511959b20f9fac87489e6